<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Sign"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:background="@drawable/layout_boarder">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_gravity="center"
        />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/family_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_family_name"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ ابتثجحخدذرزسشصضطظعغفقكلمنهوى"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            />
        <EditText
            android:id="@+id/stor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_store_name"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_Email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            />
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            />
        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user_name"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_store_type"
            android:layout_marginTop="@dimen/view_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:background="#ffffff"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/stor_type_spin"
            android:spinnerMode="dialog"/>
        <Button
            android:id="@+id/family_sign_in"
            android:background="@drawable/btn_bg"
            android:layout_width="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/action_sign_in"
            android:textColor="#ffffff"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
        <!--Large android:textStyle="bold"-->
    </LinearLayout>
</ScrollView>
</LinearLayout>