<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/view_margin"
    android:orientation="horizontal"

    android:background="@drawable/layout_boarder"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_product_name_"
            android:id="@+id/customer_name_text"
            android:textColor="@color/color1"

            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_product_code_"
            android:textColor="@color/color1"
            android:id="@+id/product_name_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_product_price_"
            android:textColor="@color/color1"
            android:id="@+id/product_quan_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            />
          >
            <Button
                android:id="@+id/accept_order"
                android:background="@drawable/deal"
                android:layout_width="30dp"
                android:layout_height="30dp"

                android:layout_gravity="right|bottom"

                android:backgroundTint="#000"
                />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:text="Deal"
            android:textColor="@color/colorAccent"
           />


    </LinearLayout>
</LinearLayout>
