<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:background="@drawable/layout_boarder">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:layout_margin="20dp">

        <EditText
            android:id="@+id/login_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user_name"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:imeActionId="6"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

        <Button
            android:id="@+id/login_button"
            android:background="@drawable/btn_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_login"
            android:textColor="#ffffff"
            android:textStyle="bold"

            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_horizontal_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Not registered?"
                android:textColor="@color/color1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_create_account"
                android:id="@+id/create_account"
                android:textColor="@color/color2"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                />
            <!--Large android:textStyle="bold"-->
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>