<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_product_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"

        android:theme="@style/myToolbarTheme"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New product"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    </android.support.v7.widget.Toolbar>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/layout_boarder"
            android:padding="20dp">

            <ImageButton
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:src="@drawable/add_image"
                android:id="@+id/add_product_imageView"
                android:background="#fff"/>
            <EditText
                android:id="@+id/product_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                />



            <EditText
                android:id="@+id/product_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_code"
                android:inputType="text"

                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_price"
                android:inputType="numberSigned"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:maxLines="1"
                android:singleLine="true" />
            <EditText
                android:id="@+id/product_description"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:singleLine="true"
                />

            <Button
                android:id="@+id/product_add"
                android:background="@drawable/btn_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Add"
                android:textColor="#ffffff"
                android:textStyle="bold"

                />

        </LinearLayout>
</ScrollView>

</LinearLayout>